# clarke_v2

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml  setup.sh
.github/workflows/: ci.yml
clarke/: README.md  __init__.py  settings.py
clarke/agents/: handles.py  lifecycle.py  results.py  session_context.py  spawn.py
clarke/api/: app.py  deps.py  middleware.py
clarke/broker/: budget.py  circuit_breaker.py  contracts.py  degraded_mode.py  lineage.py  policy.py  quotas.py  service.py
clarke/graph/: registry.py  state.py  workflow.py
clarke/ingestion/: chunking.py  documents.py  embeddings.py  graph_build.py  redaction.py  service.py
clarke/jobs/: cleanup_jobs.py  clustering_jobs.py  worker.py
clarke/learning/: attribution.py  clustering.py  directive_service.py  directive_surfacing.py  proto_classes.py  skill_effectiveness.py  tenant_signals.py  usefulness.py  weights.py
clarke/llm/: contracts.py  gateway.py  prompts.py  token_counting.py
clarke/mcp/: __main__.py  server.py  session_context_tool.py
clarke/memory/: decisions.py  episodic.py  inheritance.py  policy.py  significance.py
clarke/telemetry/: logging.py  metrics.py  tracing.py
clarke/utils/: errors.py  ids.py  json.py  time.py
docs/: CLARKE-memory-system-eval-spec.md  clarke.md
docs/draft/: brokered-context-memory-system-milestones-v2.md  brokered-context-memory-system-milestones.md  brokered-context-memory-system-spec-expanded-updatedv2.md  brokered-context-memory-system-spec-expanded.md  brokered-context-memory-system-v3.1.md  brokered-context-memory-system-v3.md  (+1 more)
openclaw/: README.md  __init__.py  install.py  openclaw.plugin.json  package-lock.json  package.json  plugin.json  tsconfig.json
openclaw/lib/: backend.py  (+3 more)
scripts/: bootstrap_clarke_skills.py  cc_session_hook.py  clarke-service.sh  eval_hallucination_judge.py  eval_report.py  generate_eval_corpus.py  migrate_md_to_clarke.py  run_eval_comparison.py  test_clarke_system.py
tests/: conftest.py  test_token_counting.py  test_token_counting_strict.py  test_utils.py
(+155 files in other folders)
